added testcontainers to load context properly